# Plant-Disease-Detection

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  pyproject.toml  quick_start.py  requirements.txt  test_system.py
.github/workflows/: ci.yml
configs/: config.yaml
data/processed/: .gitkeep
data/raw/: .gitkeep
demo/: app.py
notebooks/: demo.ipynb
scripts/: train.py
src/: data.py  models.py  training.py  utils.py  visualization.py
tests/: test_models.py
